Initial implementation of ArrayOfTables
### What's done:
- Small refactoring related to sealed classes limitations
- Initial test impplemetation of array of tables
- Kotlin update to 1.6.10